synced threads/ queue and game --good enought